tests/parser_samples/valid/root.mas
%m m1 {
    !nop;
}

%i i1 {
    !nop;
}