tests/parser_samples/invalid/multiline_macros_def/1.mas
%m a
    a;
}

%i fake_i {
    a;
}